2025-02-21T01:44:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13448291317 # 572
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-21
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 903 1383 / 917 1397
* notice: next accum: outdated-unq outdated-all / unq all: 904 1384 / 918 1398
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-07] / [2025-02-20]

2025-02-20T01:43:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13426071773 # 571
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-20
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 902 1382 / 916 1396
* notice: next accum: outdated-unq outdated-all / unq all: 903 1383 / 917 1397
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-06] / [2025-02-19]

2025-02-19T01:43:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13403690340 # 570
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-19
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 901 1381 / 914 1394
* notice: next accum: outdated-unq outdated-all / unq all: 902 1382 / 916 1396
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-02-05] / [2025-02-18]

2025-02-18T01:42:24Z: