@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-21T01:44:09Z",
+  "timestamp" : "2025-02-22T01:40:32Z",
   "count_outdated" : 1384,
   "uniques_outdated" : 904,
-  "count" : 1398,
-  "uniques" : 918,
+  "count" : 1399,
+  "uniques" : 919,
   "clones" : [
     {
       "timestamp": "2025-02-09T00:00:00Z",
@@ -106,6 +106,15 @@
     },
     {
       "timestamp": "2025-02-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
