@@ -1,3 +1,12 @@
+2025-02-22T01:40:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13468299920 # 573
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-22
+* notice: last 14d: unq all: 4 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 904 1384 / 918 1398
+* notice: next accum: outdated-unq outdated-all / unq all: 904 1384 / 919 1399
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-02-21]
+
 2025-02-21T01:44:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13448291317 # 572
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-21
